refactored several things

--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -260,7 +260,8 @@
 
       <div class="container footer-bottom clearfix">
         <div class="copyright">
-          &copy; Copyright <strong><span>Return Result Org.</span></strong
+          &copy; Copyright <strong><span>Return Result Org.</span>
+            </strong
           >. All Rights Reserved
         </div>
         <div class="credits">
