edited some links

--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -189,8 +189,9 @@
               <p>
                 Nairobi, Kenya <br />
 
-                <strong>Phone:</strong> +254 7000000<br />
-                <strong>Email:</strong> resultreturn0@gmail.com<br />
+                <a href="tel:+254 798 749323"><strong>Phone1:</strong></a> +254 798 749323<br />
+                <a href="tel:+254 745 858891"><strong>Phone2:</strong></a> +254 745 858891<br />
+                <a href="mailto:resultreturn0@gmail.com"><strong>Email:</strong></a> resultreturn0@gmail.com<br />
               </p>
             </div>
 
@@ -201,19 +202,12 @@
                   <i class="bx bx-chevron-right"></i> <a href="#">Home</a>
                 </li>
                 <li>
-                  <i class="bx bx-chevron-right"></i> <a href="#">About us</a>
+                  <i class="bx bx-chevron-right"></i> <a href="#about">About us</a>
                 </li>
                 <li>
-                  <i class="bx bx-chevron-right"></i> <a href="#">Services</a>
+                  <i class="bx bx-chevron-right"></i> <a href="#services">Services</a>
                 </li>
-                <li>
-                  <i class="bx bx-chevron-right"></i>
-                  <a href="#">Terms of service</a>
-                </li>
-                <li>
-                  <i class="bx bx-chevron-right"></i>
-                  <a href="#">Privacy policy</a>
-                </li>
+            
               </ul>
             </div>
 
@@ -227,12 +221,10 @@
                   <i class="bx bx-chevron-right"></i>
                   <a href="#">Web Development</a>
                 </li>
+               
                 <li>
                   <i class="bx bx-chevron-right"></i>
-                  <a href="#">Product Management</a>
-                </li>
-                <li>
-                  <i class="bx bx-chevron-right"></i> <a href="#">Marketing</a>
+                  <a href="#mobile">Mobile App Development</a>
                 </li>
                 <li>
                   <i class="bx bx-chevron-right"></i>
@@ -245,13 +237,12 @@
               <h4>Our Social Networks</h4>
               <p>Reach out and let us be of service!</p>
               <div class="social-links mt-3">
-                <a href="https://mobile.twitter.com/returnresult0" class="twitter"><i class="bx bxl-twitter"></i></a>
+                <a href="https://mobile.twitter.com/returnresult0" class="twitter" target="_blank"><i class="bx bxl-twitter" ></i></a>
                 <!-- <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a> -->
-                <a href="https://www.instagram.com/returnresultke/" class="instagram"
+                <a href="https://www.instagram.com/returnresultke/" target="_blank" class="instagram"
                   ><i class="bx bxl-instagram"></i
                 ></a>
-                <!-- <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a> -->
-                <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+                <a href="#" class="linkedin"><i class="bx bxl-linkedin" ></i></a>
               </div>
             </div>
           </div>
